app-1/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-1
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing

spec:
  type: LoadBalancer
  selector:
    app: app-1
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
